Fixed drawer positioning issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ html {
 }
 
 body {
-    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
 }
 
 i {
